  * debian/patches/fix_array_compare.dpatch:
    + Fix in the compiler needed for IronRuby.
      (thanks goes to C.J. Adams-Collier for providing the patch)
  * debian/control
    debian/mono-runtime.install
    debian/libmono-profiler.install:
    + Moved the libmono-profiler-* libraries to the new libmono-profiler
      package, as they pull libmono0 in which is unneeded for normal usage.

 -- Mirco Bauer <meebey@debian.org>  Thu, 30 Jul 2009 19:35:10 +0200

mono (2.4+dfsg-6) unstable; urgency=low

  * debian/rules:
    + Force pthread for armel as __thread FTBFS.
    + Build Mono.Simd in test target, which hopefully fixes the failing
      mono/mini tests.
  * debian/control:
    + Removed dh_installxsp and monodiet from the package description of
      mono-utils. (Closes: #534906)
    + Bumped Standards-Version to 3.8.2 (no changes needed)

 -- Mirco Bauer <meebey@debian.org>  Sun, 05 Jul 2009 14:44:23 +0200

mono (2.4+dfsg-5) unstable; urgency=low

  * debian/rules:
    + Let the build system decide if sigaltstack() will be used and which TLS
      instead of passing explicitly --with-sigaltstack and --with-tls to
      the ./configure script.
    + Run also the JIT (mono/mini) tests.
  * debian/patches/fix_disabling_aot_r131940.dpatch:
    + Fixes the build of kfreebsd-amd64 and kfreebsd-i386.

 -- Mirco Bauer <meebey@debian.org>  Mon, 22 Jun 2009 00:08:35 +0200

mono (2.4+dfsg-4) unstable; urgency=low

  * debian/rules:
    + Removed the config.make hack as that broke AMD64 builds and instead let
      the ./configure script from the configure-indep target create that file.

 -- Mirco Bauer <meebey@debian.org>  Sun, 14 Jun 2009 16:52:28 +0200 

mono (2.4+dfsg-3) unstable; urgency=low

  * debian/control:
    + Change Section of prj2make-sharp to devel to match archive overrides.
    + Added replaces libmono-cairo1.0-cil to libmono-cairo2.0-cil, as the
      pkg-config file was moved from that. (Closes: #531006)