@@ -1,1 +1,2 @@
 usr/bin/gmcs usr/bin/csc
+usr/bin/gmcs usr/bin/mono-csc
