@@ -1,2 +1,2 @@
-debian/tmp/usr/bin/gmcs2
+debian/tmp/usr/bin/gmcs
 debian/tmp/usr/lib/mono/2.0/gmcs.exe*
