@@ -1,1 +1,1 @@
-debian/tmp/usr/share/man/man1/gmcs2.1
+debian/tmp/usr/share/man/man1/gmcs.1
