@@ -1,2 +1,2 @@
-debian/tmp/usr/bin/mcs1
+debian/tmp/usr/bin/mcs
 debian/tmp/usr/lib/mono/1.0/mcs.exe*
