@@ -1,1 +1,1 @@
-debian/tmp/usr/share/man/man1/mcs1.1
+debian/tmp/usr/share/man/man1/mcs.1
