@@ -36,6 +36,14 @@ mono (2.4.2.3+dfsg-1~pre1) unstable; urgency=low
     debian/libmono-profiler.install:
     + Moved the libmono-profiler-* libraries to the new libmono-profiler
       package, as they pull libmono0 in which is unneeded for normal usage.
+  * debian/control
+    debian/mono-devel.install
+    debian/mono-mcs.install
+    debian/mono-gmcs.install:
+    + Moved mcs to mono-mcs and gmcs to mono-gmcs from mono-devel, as that
+      caused a lot of confusion. (closes: #525279)
+    + Added mono-csc to mono-devel in preparation to drop csc in the future as
+      it conflicts with the chicken compiler, see #509367.
 
  -- Mirco Bauer <meebey@debian.org>  Thu, 30 Jul 2009 19:35:10 +0200
 
